--- a/frontend/src/app/kudos/kudos.html
+++ b/frontend/src/app/kudos/kudos.html
@@ -15,7 +15,7 @@
 
     <div ng-show="vm.loaded">
         <div class="row">
-            <div class="col-sm-2 col-sm-offset-5 profile-container">
+            <div class="col-sm-2 col-sm-offset-5 community-member-container">
                 <div class="row">
                     <div class="col-xs-8 text-left" style="margin-top: 10px;">
                         <span class="title-label" style="border-left: 5px solid; border-color: #fb2046; padding: 5px">{{vm.kudos.communityMember.name}}</span>
