--- a/frontend/src/app/profiles.scss
+++ b/frontend/src/app/profiles.scss
@@ -1,4 +1,4 @@
-.profile-container {
+.community-member-container {
   background-color: rgba(0,0,0,0.5);
   border-radius: 0 0 0 0;
   min-width: 320px !important;
@@ -93,23 +93,57 @@
   min-height: 30px !important;
 }
 
-
-.neoLogo {
-  height: auto;
-  width: auto;
-  //min-width:100px !important;
-  min-height: 70px !important;
-  max-height: 70px !important;
-  padding-top: 15px;
-  padding-bottom: 15px
+.circle_container
+{
+  width : 128px;
+  height : 128px;
+  margin : 0;
+  padding : 0;
+  /*	border : 1px solid red; */
 }
 
-.jetbrainsLogo {
-  height: auto;
-  width: auto;
-  //min-width:100px !important;
-  min-height: 100px !important;
-  max-height: 100px !important;
-  padding-top: 0px;
-  padding-bottom: -10px
+/* Circle Main draws the actual circle */
+.circle_main
+{
+  width : 100%;
+  height : 100%;
+  border-radius : 50%;
+  border : 2px solid black;	/* can alter thickness and colour of circle on this line */
+  margin : 0;
+  padding : 0;
+}
+
+/* Circle Text Container - constrains text area to within the circle */
+.circle_text_container
+{
+  /* area constraints */
+  width : 70%;
+  height : 70%;
+  max-width : 70%;
+  max-height : 70%;
+  margin : 0;
+  padding : 0;
+
+  /* some position nudging to center the text area */
+  position : relative;
+  left : 15%;
+  top : 15%;
+
+  /* preserve 3d prevents blurring sometimes caused by the text centering in the next class */
+  transform-style : preserve-3d;
+
+  /*border : 1px solid green;*/
+}
+
+/* Circle Text - the appearance of the text within the circle plus vertical centering */
+.circle_text
+{
+  /* change font/size/etc here */
+  font: 11px "Tahoma", Arial, Serif;
+  text-align : center;
+
+  /* vertical centering technique */
+  position : relative;
+  top : 50%;
+  transform : translateY(-50%);
 }
