--- a/frontend/src/app/kudos/kudos.html
+++ b/frontend/src/app/kudos/kudos.html
@@ -1,4 +1,4 @@
-<vpr-header></vpr-header>
+<k-header></k-header>
 
 
 <!-- Main -->
@@ -14,6 +14,38 @@
     </div>
 
     <div ng-show="vm.loaded">
+        <div class="row">
+            <div class="col-sm-2">
+                <div class="col-sm-2 col-sm-offset-5">
+                    <div class="kudos-1 hidden-sm">
+                        <div class="circle_main">
+                            <div class="hashtag-label">#kudos</div>
+                            <div class="tweeter-label">@appsquickly</div>
+                            <div class="tweet-text">
+                                <div class = "circle_text">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-2 col-sm-offset-6">
+                    <div class="kudos-2 hidden-sm">
+                        <div class="circle_main">
+                            <div class="hashtag-label">#kudos</div>
+                            <div class="tweeter-label">@appsquickly</div>
+                            <div class="tweet-text">
+                                <div class = "circle_text">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="row">
             <div class="col-sm-2 col-sm-offset-5 community-member-container">
                 <div class="row">
@@ -36,10 +68,11 @@
             </div>
         </div>
         <div class="row visible-xs">
-            <div class="col-xs-12" style="background-color: #d9fcf4; height: 30px; margin-top: -10px">
+            <div class="col-xs-12" style="background-color: red; height: 30px; margin-top: -10px">
             </div>
         </div>
     </div>
 </div>
 
-<vpr-footer></vpr-footer>
+
+<k-footer></k-footer>
