--- a/frontend/src/app/profiles.scss
+++ b/frontend/src/app/profiles.scss
@@ -1,5 +1,5 @@
 .community-member-container {
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0, 0, 0, 0.7);
   border-radius: 0 0 0 0;
   min-width: 320px !important;
   max-height: 500px !important;
@@ -93,57 +93,85 @@
   min-height: 30px !important;
 }
 
-.circle_container
-{
-  width : 128px;
-  height : 128px;
-  margin : 0;
-  padding : 0;
+.kudos-1 {
+  width: 300px;
+  height: 300px;
+  padding: 0;
+  margin-top: 100px;
+  margin-left: 50px;
   /*	border : 1px solid red; */
 }
 
+.kudos-2 {
+  width: 350px;
+  height: 350px;
+  padding: 0;
+  margin-top: 100px;
+  margin-left: 50px;
+  /*	border : 1px solid red; */
+}
+
+
 /* Circle Main draws the actual circle */
-.circle_main
-{
-  width : 100%;
-  height : 100%;
-  border-radius : 50%;
-  border : 2px solid black;	/* can alter thickness and colour of circle on this line */
-  margin : 0;
-  padding : 0;
+.circle_main {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: rgba(0, 0, 0, 0.7);
+  margin: 0;
+  padding: 0;
 }
 
 /* Circle Text Container - constrains text area to within the circle */
-.circle_text_container
-{
+.tweet-text {
   /* area constraints */
-  width : 70%;
-  height : 70%;
-  max-width : 70%;
-  max-height : 70%;
-  margin : 0;
-  padding : 0;
+  width: 70%;
+  height: 70%;
+  max-width: 70%;
+  max-height: 70%;
+  margin: 0;
+  padding: 0;
 
   /* some position nudging to center the text area */
-  position : relative;
-  left : 15%;
-  top : 15%;
+  position: relative;
+  left: 15%;
+  top: 8%;
 
   /* preserve 3d prevents blurring sometimes caused by the text centering in the next class */
-  transform-style : preserve-3d;
+  transform-style: preserve-3d;
 
   /*border : 1px solid green;*/
 }
 
 /* Circle Text - the appearance of the text within the circle plus vertical centering */
-.circle_text
-{
+.circle_text {
   /* change font/size/etc here */
-  font: 11px "Tahoma", Arial, Serif;
-  text-align : center;
+  color: white;
+  text-align: left;
 
   /* vertical centering technique */
-  position : relative;
-  top : 50%;
-  transform : translateY(-50%);
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+
+.hashtag-label {
+  color: #5848f4;
+  font-family: gotham-bold, Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  position: relative;
+  top: 20%;
+  left:15%;
+}
+
+.tweeter-label {
+  color: white;
+  font-family: gotham-bold, Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  position: relative;
+  top: 20%;
+  left:15%;
 }
