--- a/frontend/src/app/profiles.scss
+++ b/frontend/src/app/profiles.scss
@@ -1,8 +1,8 @@
 .community-member-container {
   background-color: rgba(0, 0, 0, 0.7);
   border-radius: 0 0 0 0;
-  min-width: 320px !important;
-  max-height: 500px !important;
+  min-width: 22vw !important;
+  max-height: 35vw !important;
 
   display: inline-block;
   position: fixed;
@@ -14,22 +14,18 @@
 }
 
 .main-loader {
-  display: inline-block;
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  position: absolute;
+  top: 50%;
+  bottom: 50%;
+  left: 50%;
+  right: 50%;
   margin: auto;
-  min-width: 320px !important;
-  max-height: 500px !important;
 }
 
 .card {
-  //margin-top: -20px;
-  margin-left: -20px;
-  margin-right: -20px;
-  padding: 30px;
+  margin-left: -1.3vw;
+  margin-right: -1.3vw;
+  padding: 2vw;
   background-color: rgba(214, 224, 226, 0.2);
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -46,22 +42,22 @@
 }
 
 .card.hovercard .photo-container {
-  height: 300px;
+  height: 20vw;
 }
 
 .card.hovercard .featuredAvatar {
   position: absolute;
-  top: 15px;
+  top: 1vw;
   left: 0;
   right: 0;
   opacity: 1.0;
 }
 
 .card.hovercard .featuredAvatar img {
-  width: 300px;
-  height: 300px;
-  max-width: 300px;
-  max-height: 300px;
+  width: 20vw;
+  height: 20vw;
+  max-width: 20vw;
+  max-height: 20vw;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-radius: 50%;
@@ -70,7 +66,7 @@
 }
 
 .title-label {
-  font-size: 20px;
+  font-size: 1.8vw;
   color: #ffffff;
   font-family: e-din-lt, sans-serif;
   font-weight: bolder;
@@ -82,7 +78,7 @@
 }
 
 .biography {
-  font-size: 16px;
+  font-size: 1vw;
   //line-height: 1;
   color: #ffffff;
   font-weight: normal;
@@ -94,33 +90,40 @@
 }
 
 .kudos-1 {
-  width: 300px;
-  height: 300px;
+  width: 20vw;
+  height: 20vw;
   padding: 0;
-  margin-top: 50px;
-  margin-left: 50px;
+  margin-top: 3.5vw;
+  margin-left: 3.5vw;
   /*	border : 1px solid red; */
 }
 
 .kudos-2 {
-  width: 350px;
-  height: 350px;
+  width: 24vw;
+  height: 24vw;
   padding: 0;
-  margin-top: 45px;
-  margin-left: 50px;
+  margin-top: 3vw;
+  margin-left: 3.2vw;
   /*	border : 1px solid red; */
 }
 
 .kudos-3 {
-  width: 320px;
-  height: 320px;
+  width: 22vw;
+  height: 22vw;
   padding: 0;
-  margin-top: 0px;
-  margin-left: 50px;
+  margin-top: 0;
+  margin-left: 3.2vw;
   /*	border : 1px solid red; */
 }
 
-
+.kudos-4 {
+  width: 20vw;
+  height: 20vw;
+  padding: 0;
+  margin-top: 3.5vw;
+  margin-left: 5vw;
+  /*	border : 1px solid red; */
+}
 
 /* Circle Main draws the actual circle */
 .circle_main {
@@ -168,7 +171,6 @@
 
 .hashtag-label {
   font-family: gotham-bold, Helvetica, Arial, sans-serif;
-  font-size: 16px;
   font-weight: bold;
   position: relative;
   top: 20%;
@@ -178,7 +180,6 @@
 .tweeter-label {
   color: white;
   font-family: gotham-bold, Helvetica, Arial, sans-serif;
-  font-size: 16px;
   font-weight: bold;
   position: relative;
   top: 20%;
