--- a/frontend/src/app/kudos/kudos.html
+++ b/frontend/src/app/kudos/kudos.html
@@ -3,7 +3,7 @@
 <div ng-hide="vm.loaded" class="main-loader">
     <div class="row">
         <div class="col-sm-12 text-center">
-            <i class="fa fa-circle-o-notch fa-spin" style="color: #ffffff; font-size: 2vw"></i>
+            <i class="fa fa-spinner fa-spin" style="color: #ffffff; font-size: 4vw"></i>
         </div>
     </div>
 </div>
