--- a/frontend/src/app/profiles.scss
+++ b/frontend/src/app/profiles.scss
@@ -2,7 +2,7 @@
   background-color: rgba(0, 0, 0, 0.7);
   border-radius: 0 0 0 0;
   min-width: 22vw !important;
-  max-height: 35vw !important;
+  max-height: 36vw !important;
 
   display: inline-block;
   position: fixed;
@@ -111,7 +111,7 @@
   width: 22vw;
   height: 22vw;
   padding: 0;
-  margin-top: 0;
+  margin-top: 5vw;
   margin-left: 3.2vw;
   /*	border : 1px solid red; */
 }
