--- a/frontend/src/app/index.scss
+++ b/frontend/src/app/index.scss
@@ -124,7 +124,7 @@ html, body {
   padding-bottom: -1vh;
 }
 
-@import "profiles.scss";
+@import "kudos";
 
 /**
  *  Do not remove the comments below. It's the markers used by gulp-inject to inject
