--- a/frontend/src/app/kudos/kudos.html
+++ b/frontend/src/app/kudos/kudos.html
@@ -33,7 +33,7 @@
                     <div class="kudos-2 hidden-sm">
                         <div class="circle_main" ng-show="vm.kudos.tweets[1]">
                             <div class="hashtag-label crimson">@{{vm.kudos.tweets[1].hashTags.join(' ')}}</div>
-                            <div class="tweeter-label">{{vm.kudos.tweets[1].sender}}</div>
+                            <div class="tweeter-label">@{{vm.kudos.tweets[1].sender}}</div>
                             <div class="tweet-text">
                                 <div class = "circle_text">
                                     {{vm.kudos.tweets[1].text}}
@@ -71,7 +71,7 @@
                     <div class="kudos-3 hidden-sm">
                         <div class="circle_main" ng-show="vm.kudos.tweets[2]">
                             <div class="hashtag-label crimson">@{{vm.kudos.tweets[2].hashTags.join(' ')}}</div>
-                            <div class="tweeter-label">{{vm.kudos.tweets[2].sender}}</div>
+                            <div class="tweeter-label">@{{vm.kudos.tweets[2].sender}}</div>
                             <div class="tweet-text">
                                 <div class = "circle_text">
                                     {{vm.kudos.tweets[2].text}}
